Cambios en el frontEnd meramente esteticos

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 :root{ 
     font-family: 'Poppins', sans-serif;
-    color-scheme: light;
+    color-scheme: #e2e8f0;
 }
 html {
     scroll-behavior: smooth;
