Cambios finales al frontend, que sea lo que yisus quiera

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,11 @@
 
 :root{ 
     font-family: 'Poppins', sans-serif;
-    color-scheme: #e2e8f0;
 }
+
+body {
+    background-color: #fafafa;
+  }
 html {
     scroll-behavior: smooth;
   }
